--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
- <div> <app-meteo> ccccc</app-meteo></div>
+
+<body  style="background-color: blue;">
+<div class="M-div" > <app-meteo> </app-meteo></div>
+</body>
+
