--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<body  style="background-color: blue;">
+<body  style="background-color: rgb(0, 17, 255);">
 <div class="M-div" > <app-meteo> </app-meteo></div>
 </body>
 
